<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Inkling</string>

    <string name="pref_fg_color_title">Foreground colour</string>
    <string name="pref_fg_color_summary">Colour of the density field</string>

    <string name="pref_bg_color_title">Background colour</string>
    <string name="pref_bg_color_summary">Clean plate colour</string>

    <string name="pref_iterations_title">Iterations</string>
    <string name="pref_iterations_summary">Jacobi iterations: %s</string>

    <string name="pref_cursor_size_title">Cursor size</string>
    <string name="pref_cursor_size_summary">Radius of a cursor: %s</string>

    <string name="dialog_text">
        The device doesn\'t support \n
        GL_OES_texture_float extension. \n
        The app won\'t draw \n
        anything to the screen.
    </string>

    <string name="toster_text">Double tap to open settings</string>
</resources>
