<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <yuku.ambilwarna.widget.AmbilWarnaPreference
        android:key="pref_fg_color"
        android:title="@string/pref_fg_color_title"
        android:summary="@string/pref_fg_color_summary"
        android:defaultValue="0xff000000" />
    <yuku.ambilwarna.widget.AmbilWarnaPreference
        android:key="pref_bg_color"
        android:title="@string/pref_bg_color_title"
        android:summary="@string/pref_bg_color_summary"
        android:defaultValue="0xffffffff" />
    <uk.co.mishurov.fluid.NumberPickerPreference
            android:defaultValue="8"
            android:key="pref_iterations"
            android:title="@string/pref_iterations_title"
            android:summary="@string/pref_iterations_summary"
            min="4"
            max="32" />
    <uk.co.mishurov.fluid.NumberPickerPreference
            android:defaultValue="10"
            android:key="pref_cursor_size"
            android:title="@string/pref_cursor_size_title"
            android:summary="@string/pref_cursor_size_summary"
            min="5"
            max="20" />

</PreferenceScreen>
